Add configurations for DataSource

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 server:
   servlet:
     context-path: /api
+
+app:
+  datasource:
+    jdbc-url: jdbc:postgresql://localhost:5432/slccd
+    username: postgres
+    password: password
+    pool-size: 30
